# Rust

./: .gitignore  README.md
AOC/: .gitignore  README.md
AOC/2021/: Cargo.toml
AOC/2021/Day1/d1p2/: depths.txt
AOC/2021/Day1/prob1/: Cargo.toml
AOC/2021/Day1/prob1/src/: main.rs
AOC/2021/Day1/prob2/src/: main.rs
AOC/2021/Day10/d10p1/: Cargo.toml
AOC/2021/Day10/d10p1/src/: main.rs
AOC/2021/Day10/d10p2/: Cargo.toml
AOC/2021/Day10/d10p2/src/: .main.rs.swp  main.rs
AOC/2021/Day11/d11p1/: Cargo.toml
AOC/2021/Day11/d11p1/src/: main.rs
AOC/2021/Day11/d11p2/: Cargo.toml
AOC/2021/Day11/d11p2/src/: main.rs
AOC/2021/Day12/d12p1/: .input3.txt.swp  Cargo.toml  petgraph_main.rs
AOC/2021/Day12/d12p1/src/: .main.rs.swo  .main.rs.swp  algo.txt  main.rs
AOC/2021/Day12/d12p2/: Cargo.toml
AOC/2021/Day12/d12p2/src/: main.rs
AOC/2021/Day2/d2p1/: Cargo.toml
AOC/2021/Day2/d2p1/src/: main.rs
AOC/2021/Day2/d2p2/: Cargo.toml
AOC/2021/Day2/d2p2/src/: main.rs
AOC/2021/Day2/prob1/: Cargo.toml
AOC/2021/Day2/prob1/src/: main.rs
AOC/2021/Day3/d3p1/: Cargo.toml
AOC/2021/Day3/d3p1/src/: main.rs
AOC/2021/Day3/d3p2/: Cargo.toml
AOC/2021/Day3/d3p2/src/: main.rs
AOC/2021/Day4/d4p1/: Cargo.toml
AOC/2021/Day5/d5p1/: Cargo.toml
AOC/2021/Day5/d5p2/: Cargo.toml
AOC/2021/Day6/d6p1/: Cargo.toml
AOC/2021/Day6/d6p2/: Cargo.toml
AOC/2021/Day7/d7p1/: Cargo.toml
AOC/2021/Day7/d7p2/: Cargo.toml
AOC/2021/Day8/d8p1/: Cargo.toml
AOC/2021/Day8/d8p2/: Cargo.toml
AOC/2021/Day9/d9p1/: Cargo.toml
AOC/2021/Day9/d9p2/: Cargo.toml
AOC/2021/shared/src/: lib.rs
(+16 files in other folders)
