
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
"shared",
"Day2/d2p1",
"Day2/d2p2",
"Day3/d3p1",
"Day3/d3p2",
"Day4/d4p1",
"Day4/d4p2",
"Day5/d5p1",
"Day5/d5p2",
"Day6/d6p1",
"Day6/d6p2",
"Day7/d7p1",
"Day7/d7p2",
"Day8/d8p1",
"Day8/d8p2",
"Day9/d9p1",
"Day9/d9p2",
"Day10/d10p1",
"Day10/d10p2",
"Day11/d11p1",
"Day11/d11p2"
]
